--- a/biodata.html
+++ b/biodata.html
@@ -17,9 +17,9 @@
         <ul> 5. Marketing Antusiast </ul>
       
         <h2>Pendidikan Saya</h2>
-        <li> 2014-2017 SMPN 2 Surabaya</li>
-        <li> 2017-2020 SMAN 9 Surabaya</li>
-        <li> 2020-Present Univeraitas Hayam Wuruk Perbanas Surabaya</li>
+        <li> 2014 - 2017 SMPN 2 Surabaya</li>
+        <li> 2017 - 2020 SMAN 9 Surabaya</li>
+        <li> 2020 - Present Univeraitas Hayam Wuruk Perbanas Surabaya</li>
     
         <h2> Kontak Saya </h2>
         <a Href="https://wwww.intagram.com/shalvasabrina/" >instagram</a>
